5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1764_1577.log
== TEST (2019-05-27 20:41:31) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = array(arrange(N))

print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:41:52) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = array(arange(N))

print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:42:06) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = array(arange(N))

print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:42:58) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = array(arange(N))

print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:43:46) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = array(arange(N):N-1)

print(t)
-- ERROR:
File "XXXX", line 11
    t = array(arange(N):N-1)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:44:19) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = array(arange(N))

print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:45:54) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = zeros(N)

print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:46:17) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = zeros(N)

print(t)
print(N)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:47:11) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = array(zeros(N))

print(t)
print(N)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:48:01) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = zeros(N,dtype =int)

print(t)
print(N)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:49:07) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = zeros(N,dtype =int)

print(t)
print(N)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:50:21) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = zeros(N,dtype=int)
d = zeros(N, dtype=int)

print(t)
print(N)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:50:44) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = zeros(N,dtype=int)
#d = zeros(N, dtype=int)

print(t)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:54:04) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = zeros(N,dtype=int)
 
vetorResultado = array(((aceleracao * (t ** 2) / 2)) * (velocidadeInicial * t))

print(vetorResultado)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:54:14) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = zeros(N,dtype=int)
 
vetorResultado = array(((aceleracao * (t ** 2) / 2)) * (velocidadeInicial * t))

print(vetorResultado)


-- EXECUTION TIME:
0.59509
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[0.00000e+00 2.04000e+00 1.63200e+01 5.50800e+01 1.30560e+02 2.55000e+02
 4.40640e+02 6.99720e+02 1.04448e+03 1.48716e+03 2.04000e+03 2.71524e+03]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[0.00000000e+00 3.74850000e+02 2.99880000e+03 1.01209500e+04
 2.39904000e+04 4.68562500e+04 8.09676000e+04 1.28573550e+05
 1.91923200e+05 2.73265650e+05 3.74850000e+05 4.98925350e+05
 6.47740800e+05 8.23545450e+05 1.02858840e+06 1.26511875e+06
 1.53538560e+06 1.84163805e+06 2.18612520e+06 2.57109615e+06
 2.99880000e+06 3.47148585e+06 3.99140280e+06 4.56079995e+06
 5.18192640e+06 5.85703125e+06 6.58836360e+06 7.37817255e+06
 8.22870720e+06 9.14221665e+06 1.01209500e+07 1.11671564e+07
 1.22830848e+07 1.34709845e+07 1.47331044e+07 1.60716938e+07
 1.74890016e+07 1.89872771e+07 2.05687692e+07 2.22357272e+07
 2.39904000e+07 2.58350369e+07 2.77718868e+07]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 20:55:02) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = zeros(N,dtype=int)
 
vetorResultado = array(((aceleracao * (t ** 2) / 2)) * (velocidadeInicial * t))

print(vetorResultado)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 20:55:39) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = zeros(N,dtype=int)
 
vetorResultado = array(((aceleracao * (t ** 2) / 2)) + (velocidadeInicial * t))

print(vetorResultado)


-- EXECUTION TIME:
0.352905
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 21:06:28) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = zeros(N,dtype=int)
 
print(vetorResultado = array(((aceleracao * (t ** 2) / 2)) + (velocidadeInicial * t)))

#print(vetorResultado)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 21:06:50) 
-- CODE:
# Nome: Nathaly Barbosa Leite
# Curso: Estatística
# Matrícula: 21954721

from numpy import *

aceleracao = float(input("Aceleracao do carro: "))
velocidadeInicial = float(input("Velocidade Inicial: "))
N = int(input("Quantidade de Posicoes: "))

t = arange(N)
d = zeros(N,dtype=int)
 
vetorResultado = array(((aceleracao * (t ** 2) / 2)) + (velocidadeInicial * t))

print(vetorResultado)


-- EXECUTION TIME:
0.59877
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
